--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
-.DS_Store
-*(Autosaved)*
-gf_DOWNLOAD/
+*~
+venv
+build.stamp
+proof
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
