--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,19 +19,8 @@ jobs:
     - name: Check with fontbakery
       run: make test
       continue-on-error: true
-    - name: Generate proofs
-      run: make proof
-    - name: Gather
-      run: |
-          mkdir for-gh-pages
-          mv fontbakery-report.html for-gh-pages
-          mv proof/* for-gh-pages
-    - name: Archive artifacts
-      uses: actions/upload-artifact@v2
+    - name: Regression Test
+      uses: m4rc1e/font-browser-tests-action@latest
       with:
-        name: Artifacts
-        path: |
-          for-gh-pages
-    - name: Remove temp folder
-      run: |
-          rm -rf for-gh-pages
+        paths: ./fonts/variable
+        fonts_before: 'google-fonts'
