--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
       run: make test
       continue-on-error: true
     - name: Regression Test
-      uses: m4rc1e/font-browser-tests-action@latest
+      uses: m4rc1e/font-browser-tests-action@v0.1.1
       with:
         paths: ./fonts/variable
         fonts_before: 'google-fonts'
