--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,3 +16,5 @@ jobs:
       with:
         paths: ./fonts/variable
         fonts_before: 'google-fonts'
+    - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
