--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Install Linux dependencies
+      run: |
+        sudo snap install yq
+    - name: Build font
+      run: make build
     - name: Regression Test
       uses: m4rc1e/font-browser-tests-action@v0.1.7
       with:
