--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,10 @@ name: Build font and specimen
 
 on: [push]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   build-fonts:
     runs-on: ubuntu-latest
