--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,7 @@ jobs:
       - uses: m4rc1e/font-browser-tests-action@main
         with:
           paths: ./fonts/variable
+          github-token: "catso"
 
 #      uses: m4rc1e/font-browser-tests-action@v0.1.7
 #      with:
