--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
       - build-fonts
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest] #[ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/download-artifact@v3
@@ -42,3 +42,5 @@ jobs:
         with:
           paths: ./fonts/variable
           fonts_before: google-fonts
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
